@@ -18,7 +18,14 @@
     <pcl level="3e"/>
   <!--no pjl--><!--No "text"?--></lang>
   <autodetect>
-  <!--no known parport probe information--></autodetect>
+    <general>
+      <ieee1284>MFG:Hewlett-Packard;MDL:OfficeJet G95;CMD:MLC,PCL,PML,SCL;CLASS:PRINTER;DESCRIPTION:Hewlett-Packard OfficeJet G Series;</ieee1284>
+      <manufacturer>Hewlett-Packard</manufacturer>
+      <model>OfficeJet G95</model>
+      <description>Hewlett-Packard OfficeJet G Series</description>
+      <commandset>MLC,PCL,PML,SCL</commandset>
+    </general>
+  </autodetect>
   <functionality>B</functionality>
   <driver>hpijs</driver>
   <!--no "contrib_url"-->
