@@ -1,3 +1,8 @@
+2004-11-29  Tim Waugh <twaugh@redhat.com>
+
+	* printer/HP-OfficeJet_G95.xml: Added IEEE 1284
+	information (RH bug #141057).
+
 2004-11-24  Till Kamppeter <till.kamppeter@gmx.net>
 	* driver/epl5700l.xml, driver/epl5800l.xml, driver/epl5900l.xml,
 	  driver/epl6100l.xml, driver/epl6200l.xml: Corrected driver
